# gdx-texture-packer-gui

./: .gitattributes  .gitignore  .gitmodules  CHANGES  CHANGES.md  Dockerfile  README.md  assemble-natives-linux.sh  assemble-natives-macos.sh  assemble-natives-windows.bat  assemble-natives-windows.sh  build.gradle  gradle.properties  lml.dtd  settings.gradle
.github/ISSUE_TEMPLATE/: crash-report.md
assets/: hotkeys-default.txt  hotkeys.txt  hotkeys_debug.txt  hotkeys_default.txt  hotkeys_user.txt
assets/i18n/: bundle.properties  bundle_de.properties  bundle_ru.properties  bundle_zh_CN.properties  bundle_zh_TW.properties  bundle_zh_cn.properties  bundle_zh_tw.properties
assets/lml/: canvasInfoPanel.lml  common.lml  dialogAbout.lml  dialogApplicationLog.lml  dialogBasisuInfo.lml  dialogError.lml  dialogExtensionModuleRequired.lml  dialogInputFileProperties.lml  dialogInterfaceScaling.lml  dialogPacking.lml  dialogPackingListItem.lml  dialogPackingLog.lml  (+25 more)
basisu-wrapper/: .gitignore  README.md  build.gradle
basisu-wrapper/jni-test/: CMakeLists.txt  file_utils.cpp  file_utils.h  main.cpp  run.bat  run.sh
core/: build.gradle  lml.dtd
desktop/: build.gradle
desktop-lwjgl3/: build.gradle
distribution/: add_to_start_menu..bat  create_desktop_shortcut.bat  installer-nsis.nsi  launcher.bat  launcher.sh  launcher_no_cmd.vbs  license.txt  readme.txt
gdx-texture-packer-gui/: .gitignore  CHANGES  build.gradle  gradle.properties  lml.dtd
modules/: modules.json
resources/: icon.ase  ios-icons-render.sh  logo.ase  texture-packer.tpproj
secret/: .gitignore
(+779 files in other folders)
